[tool.poetry]
name = "ilswlol"
version = "0.1.0"
description = "A nice pornhub "
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/pornhub"

[tool.poetry.dependencies]
requests = "^2.21.0"
beautifulsoup4 = "^4.7.0"
youtube_dl = "^2019"
alembic = "^1.0"
SQLAlchemy = "1.3"
sqlalchemy-utils = "^0.33"
psycopg2-binary = "^2.7"


[tool.poetry.dev-dependencies]
# Linting
flake8 = "*"
flake8-docstrings = "*"
flake8-print = "*"
flake8-commas = "*"
flake8-bugbear = "*"
flake8-string-format = "*"

# Testing
pytest = "*"
pytest-cov = "*"
pytest-greendots = "*"
pytest-watch = "*"
hypothesis = "*"

# Niceness
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
