[tool.poetry]
name = "pornhub-dl"
version = "0.1.0"
description = "A nice pornhub "
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/pornhub"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23"
beautifulsoup4 = "^4.8"
youtube_dl = "^2020"
alembic = "^1.4"
SQLAlchemy = "^1.3"
sqlalchemy-utils = "^0.36"
psycopg2-binary = "^2.8"
toml = "^0.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
